<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_cardCarrosId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="16dp"
        android:elevation="16dp"
        app:cardBackgroundColor="@color/Lightgray"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_cardContentId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/iv_carId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/eletric_car"
                android:contentDescription="@string/description_carro"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tv_precoId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_preco"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_carId"/>

            <TextView
                android:id="@+id/tv_precoValueId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_preco_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_precoId"
                app:layout_constraintTop_toBottomOf="@id/iv_carId"/>

            <TextView
                android:id="@+id/tv_bateriaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bateria"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_precoId"/>

            <TextView
                android:id="@+id/tv_bateriaValueId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_bateria_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_bateriaId"
                app:layout_constraintTop_toBottomOf="@id/tv_precoId"/>

            <TextView
                android:id="@+id/tv_potenciaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_potencia"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_bateriaId"/>

            <TextView
                android:id="@+id/tv_potenciaValueId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_potencia_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_potenciaId"
                app:layout_constraintTop_toBottomOf="@id/tv_bateriaId"/>

            <TextView
                android:id="@+id/tv_recargaId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recarga"
                style="@style/TextAppearance.AppCompat.Body2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_potenciaId"/>

            <TextView
                android:id="@+id/tv_recargaValueId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recarga_value"
                style="@style/TextAppearance.AppCompat.Body1"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toEndOf="@id/tv_recargaId"
                app:layout_constraintTop_toBottomOf="@id/tv_potenciaId"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>