<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.CalcularAutonomiaActivity">

    <ImageView
        android:id="@+id/iv_closeId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_close" />

    <TextView
        android:id="@+id/tv_tituloId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/tv_calculo_de_autonomia"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_closeId"/>

    <EditText
        android:id="@+id/et_precoKwhId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_preco_kwh"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tituloId"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_kmPercorridoId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/et_km_percorrido"
        android:inputType="numberDecimal"
        android:maxLength="10"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_precoKwhId"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_calcularId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_calcular"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_kmPercorridoId"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tv_resultadoId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calcularId"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>